学习zgc以及hotspot